# WEB_dz_10

./: pyproject.toml
hw_project/hw_project/: settings.py
hw_project/users/: urls.py  views.py
hw_project/users/templates/users/: login.html
