[tool.poetry]
name = "web-dz-10-main"
version = "0.1.0"
description = ""
authors = ["9-Bogdan <127949078+9-Bogdan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_dz_10_main"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg2 = "^2.9.9"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
